// Vitest Snapshot v1

exports[`filemapper > 4.filemap-with-components 1`] = `
{
  "children": [
    {
      "children": [],
      "file": File {
        "base": "_reset.svelte",
        "dir": "test/unit/filemapper/example/routes/admin",
        "ext": ".svelte",
        "name": "_reset",
        "path": "test/unit/filemapper/example/routes/admin/_reset.svelte",
      },
      "id": "_default_admin",
      "meta": {
        "reset": true,
      },
      "module": "test/unit/filemapper/example/routes/admin/_reset.svelte",
      "name": "admin",
    },
    {
      "children": [
        {
          "children": [],
          "file": File {
            "base": "[slug].svelte",
            "dir": "test/unit/filemapper/example/routes/blog",
            "ext": ".svelte",
            "name": "[slug]",
            "path": "test/unit/filemapper/example/routes/blog/[slug].svelte",
          },
          "id": "_default_blog__slug__svelte",
          "meta": {
            "dynamic": true,
          },
          "module": "test/unit/filemapper/example/routes/blog/[slug].svelte",
          "name": "[slug]",
        },
        {
          "children": [],
          "file": File {
            "base": "prefixed[slug].svelte",
            "dir": "test/unit/filemapper/example/routes/blog",
            "ext": ".svelte",
            "name": "prefixed[slug]",
            "path": "test/unit/filemapper/example/routes/blog/prefixed[slug].svelte",
          },
          "id": "_default_blog_prefixed_slug__svelte",
          "meta": {
            "dynamic": true,
          },
          "module": "test/unit/filemapper/example/routes/blog/prefixed[slug].svelte",
          "name": "prefixed[slug]",
        },
      ],
      "file": File {
        "base": "blog",
        "dir": "test/unit/filemapper/example/routes",
        "ext": "",
        "name": "blog",
        "path": "test/unit/filemapper/example/routes/blog",
      },
      "id": "_default_blog",
      "meta": {},
      "module": false,
      "name": "blog",
    },
    {
      "children": [],
      "file": File {
        "base": "index.svelte",
        "dir": "test/unit/filemapper/example/routes",
        "ext": ".svelte",
        "name": "index",
        "path": "test/unit/filemapper/example/routes/index.svelte",
      },
      "id": "_default_index_svelte",
      "meta": {},
      "module": "test/unit/filemapper/example/routes/index.svelte",
      "name": "index",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "file": File {
                "base": "foo.svelte",
                "dir": "test/unit/filemapper/example/routes/no-layouts/nested",
                "ext": ".svelte",
                "name": "foo",
                "path": "test/unit/filemapper/example/routes/no-layouts/nested/foo.svelte",
              },
              "id": "_default_no_layouts_nested_foo_svelte",
              "meta": {},
              "module": "test/unit/filemapper/example/routes/no-layouts/nested/foo.svelte",
              "name": "foo",
            },
            {
              "children": [],
              "file": File {
                "base": "index.svelte",
                "dir": "test/unit/filemapper/example/routes/no-layouts/nested",
                "ext": ".svelte",
                "name": "index",
                "path": "test/unit/filemapper/example/routes/no-layouts/nested/index.svelte",
              },
              "id": "_default_no_layouts_nested_index_svelte",
              "meta": {},
              "module": "test/unit/filemapper/example/routes/no-layouts/nested/index.svelte",
              "name": "index",
            },
          ],
          "file": File {
            "base": "nested",
            "dir": "test/unit/filemapper/example/routes/no-layouts",
            "ext": "",
            "name": "nested",
            "path": "test/unit/filemapper/example/routes/no-layouts/nested",
          },
          "id": "_default_no_layouts_nested",
          "meta": {},
          "module": false,
          "name": "nested",
        },
      ],
      "file": File {
        "base": "no-layouts",
        "dir": "test/unit/filemapper/example/routes",
        "ext": "",
        "name": "no-layouts",
        "path": "test/unit/filemapper/example/routes/no-layouts",
      },
      "id": "_default_no_layouts",
      "meta": {},
      "module": false,
      "name": "no-layouts",
    },
  ],
  "file": File {
    "base": "_module.svelte",
    "dir": "test/unit/filemapper/example/routes",
    "ext": ".svelte",
    "name": "_module",
    "path": "test/unit/filemapper/example/routes/_module.svelte",
  },
  "id": "_default",
  "meta": {},
  "module": "test/unit/filemapper/example/routes/_module.svelte",
  "name": undefined,
  "rootName": "default",
}
`;

exports[`files are mapped > 1.filemap-only 1`] = `
{
  "children": [
    {
      "children": [],
      "file": File {
        "base": "_module.svelte",
        "dir": "test/unit/filemapper/example/routes",
        "ext": ".svelte",
        "name": "_module",
        "path": "test/unit/filemapper/example/routes/_module.svelte",
      },
      "id": "_default__module_svelte",
      "meta": {},
      "module": "test/unit/filemapper/example/routes/_module.svelte",
      "name": "_module",
    },
    {
      "children": [
        {
          "children": [],
          "file": File {
            "base": "_reset.svelte",
            "dir": "test/unit/filemapper/example/routes/admin",
            "ext": ".svelte",
            "name": "_reset",
            "path": "test/unit/filemapper/example/routes/admin/_reset.svelte",
          },
          "id": "_default_admin__reset_svelte",
          "meta": {},
          "module": "test/unit/filemapper/example/routes/admin/_reset.svelte",
          "name": "_reset",
        },
      ],
      "file": File {
        "base": "admin",
        "dir": "test/unit/filemapper/example/routes",
        "ext": "",
        "name": "admin",
        "path": "test/unit/filemapper/example/routes/admin",
      },
      "id": "_default_admin",
      "meta": {},
      "module": false,
      "name": "admin",
    },
    {
      "children": [
        {
          "children": [],
          "file": File {
            "base": "[slug].svelte",
            "dir": "test/unit/filemapper/example/routes/blog",
            "ext": ".svelte",
            "name": "[slug]",
            "path": "test/unit/filemapper/example/routes/blog/[slug].svelte",
          },
          "id": "_default_blog__slug__svelte",
          "meta": {},
          "module": "test/unit/filemapper/example/routes/blog/[slug].svelte",
          "name": "[slug]",
        },
        {
          "children": [],
          "file": File {
            "base": "prefixed[slug].svelte",
            "dir": "test/unit/filemapper/example/routes/blog",
            "ext": ".svelte",
            "name": "prefixed[slug]",
            "path": "test/unit/filemapper/example/routes/blog/prefixed[slug].svelte",
          },
          "id": "_default_blog_prefixed_slug__svelte",
          "meta": {},
          "module": "test/unit/filemapper/example/routes/blog/prefixed[slug].svelte",
          "name": "prefixed[slug]",
        },
      ],
      "file": File {
        "base": "blog",
        "dir": "test/unit/filemapper/example/routes",
        "ext": "",
        "name": "blog",
        "path": "test/unit/filemapper/example/routes/blog",
      },
      "id": "_default_blog",
      "meta": {},
      "module": false,
      "name": "blog",
    },
    {
      "children": [],
      "file": File {
        "base": "index.svelte",
        "dir": "test/unit/filemapper/example/routes",
        "ext": ".svelte",
        "name": "index",
        "path": "test/unit/filemapper/example/routes/index.svelte",
      },
      "id": "_default_index_svelte",
      "meta": {},
      "module": "test/unit/filemapper/example/routes/index.svelte",
      "name": "index",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "file": File {
                "base": "foo.svelte",
                "dir": "test/unit/filemapper/example/routes/no-layouts/nested",
                "ext": ".svelte",
                "name": "foo",
                "path": "test/unit/filemapper/example/routes/no-layouts/nested/foo.svelte",
              },
              "id": "_default_no_layouts_nested_foo_svelte",
              "meta": {},
              "module": "test/unit/filemapper/example/routes/no-layouts/nested/foo.svelte",
              "name": "foo",
            },
            {
              "children": [],
              "file": File {
                "base": "index.svelte",
                "dir": "test/unit/filemapper/example/routes/no-layouts/nested",
                "ext": ".svelte",
                "name": "index",
                "path": "test/unit/filemapper/example/routes/no-layouts/nested/index.svelte",
              },
              "id": "_default_no_layouts_nested_index_svelte",
              "meta": {},
              "module": "test/unit/filemapper/example/routes/no-layouts/nested/index.svelte",
              "name": "index",
            },
          ],
          "file": File {
            "base": "nested",
            "dir": "test/unit/filemapper/example/routes/no-layouts",
            "ext": "",
            "name": "nested",
            "path": "test/unit/filemapper/example/routes/no-layouts/nested",
          },
          "id": "_default_no_layouts_nested",
          "meta": {},
          "module": false,
          "name": "nested",
        },
      ],
      "file": File {
        "base": "no-layouts",
        "dir": "test/unit/filemapper/example/routes",
        "ext": "",
        "name": "no-layouts",
        "path": "test/unit/filemapper/example/routes/no-layouts",
      },
      "id": "_default_no_layouts",
      "meta": {},
      "module": false,
      "name": "no-layouts",
    },
  ],
  "file": File {
    "base": "routes",
    "dir": "test/unit/filemapper/example",
    "ext": "",
    "name": "routes",
    "path": "test/unit/filemapper/example/routes",
  },
  "id": "_default",
  "meta": {},
  "module": undefined,
  "name": undefined,
  "rootName": "default",
}
`;

exports[`modules are merged with parent node > 2.filemap-with-modules 1`] = `
{
  "children": [
    {
      "children": [],
      "file": File {
        "base": "_reset.svelte",
        "dir": "test/unit/filemapper/example/routes/admin",
        "ext": ".svelte",
        "name": "_reset",
        "path": "test/unit/filemapper/example/routes/admin/_reset.svelte",
      },
      "id": "_default_admin",
      "meta": {},
      "module": "test/unit/filemapper/example/routes/admin/_reset.svelte",
      "name": "admin",
    },
    {
      "children": [
        {
          "children": [],
          "file": File {
            "base": "[slug].svelte",
            "dir": "test/unit/filemapper/example/routes/blog",
            "ext": ".svelte",
            "name": "[slug]",
            "path": "test/unit/filemapper/example/routes/blog/[slug].svelte",
          },
          "id": "_default_blog__slug__svelte",
          "meta": {},
          "module": "test/unit/filemapper/example/routes/blog/[slug].svelte",
          "name": "[slug]",
        },
        {
          "children": [],
          "file": File {
            "base": "prefixed[slug].svelte",
            "dir": "test/unit/filemapper/example/routes/blog",
            "ext": ".svelte",
            "name": "prefixed[slug]",
            "path": "test/unit/filemapper/example/routes/blog/prefixed[slug].svelte",
          },
          "id": "_default_blog_prefixed_slug__svelte",
          "meta": {},
          "module": "test/unit/filemapper/example/routes/blog/prefixed[slug].svelte",
          "name": "prefixed[slug]",
        },
      ],
      "file": File {
        "base": "blog",
        "dir": "test/unit/filemapper/example/routes",
        "ext": "",
        "name": "blog",
        "path": "test/unit/filemapper/example/routes/blog",
      },
      "id": "_default_blog",
      "meta": {},
      "module": false,
      "name": "blog",
    },
    {
      "children": [],
      "file": File {
        "base": "index.svelte",
        "dir": "test/unit/filemapper/example/routes",
        "ext": ".svelte",
        "name": "index",
        "path": "test/unit/filemapper/example/routes/index.svelte",
      },
      "id": "_default_index_svelte",
      "meta": {},
      "module": "test/unit/filemapper/example/routes/index.svelte",
      "name": "index",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "file": File {
                "base": "foo.svelte",
                "dir": "test/unit/filemapper/example/routes/no-layouts/nested",
                "ext": ".svelte",
                "name": "foo",
                "path": "test/unit/filemapper/example/routes/no-layouts/nested/foo.svelte",
              },
              "id": "_default_no_layouts_nested_foo_svelte",
              "meta": {},
              "module": "test/unit/filemapper/example/routes/no-layouts/nested/foo.svelte",
              "name": "foo",
            },
            {
              "children": [],
              "file": File {
                "base": "index.svelte",
                "dir": "test/unit/filemapper/example/routes/no-layouts/nested",
                "ext": ".svelte",
                "name": "index",
                "path": "test/unit/filemapper/example/routes/no-layouts/nested/index.svelte",
              },
              "id": "_default_no_layouts_nested_index_svelte",
              "meta": {},
              "module": "test/unit/filemapper/example/routes/no-layouts/nested/index.svelte",
              "name": "index",
            },
          ],
          "file": File {
            "base": "nested",
            "dir": "test/unit/filemapper/example/routes/no-layouts",
            "ext": "",
            "name": "nested",
            "path": "test/unit/filemapper/example/routes/no-layouts/nested",
          },
          "id": "_default_no_layouts_nested",
          "meta": {},
          "module": false,
          "name": "nested",
        },
      ],
      "file": File {
        "base": "no-layouts",
        "dir": "test/unit/filemapper/example/routes",
        "ext": "",
        "name": "no-layouts",
        "path": "test/unit/filemapper/example/routes/no-layouts",
      },
      "id": "_default_no_layouts",
      "meta": {},
      "module": false,
      "name": "no-layouts",
    },
  ],
  "file": File {
    "base": "_module.svelte",
    "dir": "test/unit/filemapper/example/routes",
    "ext": ".svelte",
    "name": "_module",
    "path": "test/unit/filemapper/example/routes/_module.svelte",
  },
  "id": "_default",
  "meta": {},
  "module": "test/unit/filemapper/example/routes/_module.svelte",
  "name": undefined,
  "rootName": "default",
}
`;

exports[`options get added > 3.filemap-with-resets 1`] = `
{
  "children": [
    {
      "children": [],
      "file": File {
        "base": "_reset.svelte",
        "dir": "test/unit/filemapper/example/routes/admin",
        "ext": ".svelte",
        "name": "_reset",
        "path": "test/unit/filemapper/example/routes/admin/_reset.svelte",
      },
      "id": "_default_admin",
      "meta": {
        "reset": true,
      },
      "module": "test/unit/filemapper/example/routes/admin/_reset.svelte",
      "name": "admin",
    },
    {
      "children": [
        {
          "children": [],
          "file": File {
            "base": "[slug].svelte",
            "dir": "test/unit/filemapper/example/routes/blog",
            "ext": ".svelte",
            "name": "[slug]",
            "path": "test/unit/filemapper/example/routes/blog/[slug].svelte",
          },
          "id": "_default_blog__slug__svelte",
          "meta": {
            "dynamic": true,
          },
          "module": "test/unit/filemapper/example/routes/blog/[slug].svelte",
          "name": "[slug]",
        },
        {
          "children": [],
          "file": File {
            "base": "prefixed[slug].svelte",
            "dir": "test/unit/filemapper/example/routes/blog",
            "ext": ".svelte",
            "name": "prefixed[slug]",
            "path": "test/unit/filemapper/example/routes/blog/prefixed[slug].svelte",
          },
          "id": "_default_blog_prefixed_slug__svelte",
          "meta": {
            "dynamic": true,
          },
          "module": "test/unit/filemapper/example/routes/blog/prefixed[slug].svelte",
          "name": "prefixed[slug]",
        },
      ],
      "file": File {
        "base": "blog",
        "dir": "test/unit/filemapper/example/routes",
        "ext": "",
        "name": "blog",
        "path": "test/unit/filemapper/example/routes/blog",
      },
      "id": "_default_blog",
      "meta": {},
      "module": false,
      "name": "blog",
    },
    {
      "children": [],
      "file": File {
        "base": "index.svelte",
        "dir": "test/unit/filemapper/example/routes",
        "ext": ".svelte",
        "name": "index",
        "path": "test/unit/filemapper/example/routes/index.svelte",
      },
      "id": "_default_index_svelte",
      "meta": {},
      "module": "test/unit/filemapper/example/routes/index.svelte",
      "name": "index",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "file": File {
                "base": "foo.svelte",
                "dir": "test/unit/filemapper/example/routes/no-layouts/nested",
                "ext": ".svelte",
                "name": "foo",
                "path": "test/unit/filemapper/example/routes/no-layouts/nested/foo.svelte",
              },
              "id": "_default_no_layouts_nested_foo_svelte",
              "meta": {},
              "module": "test/unit/filemapper/example/routes/no-layouts/nested/foo.svelte",
              "name": "foo",
            },
            {
              "children": [],
              "file": File {
                "base": "index.svelte",
                "dir": "test/unit/filemapper/example/routes/no-layouts/nested",
                "ext": ".svelte",
                "name": "index",
                "path": "test/unit/filemapper/example/routes/no-layouts/nested/index.svelte",
              },
              "id": "_default_no_layouts_nested_index_svelte",
              "meta": {},
              "module": "test/unit/filemapper/example/routes/no-layouts/nested/index.svelte",
              "name": "index",
            },
          ],
          "file": File {
            "base": "nested",
            "dir": "test/unit/filemapper/example/routes/no-layouts",
            "ext": "",
            "name": "nested",
            "path": "test/unit/filemapper/example/routes/no-layouts/nested",
          },
          "id": "_default_no_layouts_nested",
          "meta": {},
          "module": false,
          "name": "nested",
        },
      ],
      "file": File {
        "base": "no-layouts",
        "dir": "test/unit/filemapper/example/routes",
        "ext": "",
        "name": "no-layouts",
        "path": "test/unit/filemapper/example/routes/no-layouts",
      },
      "id": "_default_no_layouts",
      "meta": {},
      "module": false,
      "name": "no-layouts",
    },
  ],
  "file": File {
    "base": "_module.svelte",
    "dir": "test/unit/filemapper/example/routes",
    "ext": ".svelte",
    "name": "_module",
    "path": "test/unit/filemapper/example/routes/_module.svelte",
  },
  "id": "_default",
  "meta": {},
  "module": "test/unit/filemapper/example/routes/_module.svelte",
  "name": undefined,
  "rootName": "default",
}
`;
